--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.14.0",
     "@tailwindcss/typography": "^0.5.13",
+    "pinia": "^2.1.7",
     "prisma": "^5.14.0"
   }
 }
