--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/supabase": "^1.2.2",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
+    "stripe": "^15.10.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
